src/index.css
body {
  margin: 0;
  font-family: 'Open Sans', sans-serif !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html {
  overflow: scroll;
  overflow-x: hidden;
}

::-webkit-scrollbar {
  width: 0; /* Remove scrollbar space */
  background: transparent; /* Optional: just make scrollbar invisible */
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

/*
 primary: #59C4C4
 secondary: #F2714D

 primaryBorder: #336E7B
 secondaryBorder: #BC340E
*/

/* Overrides Start */

@media (min-width: 769px) {
  .ui.text.menu {
    margin: 1em -1.25em;
  }
}
h1 {
  font-size: 28px !important;
  line-height: 1em !important;
}

.sub.header {
  color: #3b3b3b !important;
  font-size: 14px !important;
  padding-top: 8px !important;
  margin-bottom: -14px !important;
  line-height: 18px;
}

.ui.header {
  font-family: 'Open Sans', sans-serif !important;
}

.ui.menu .item:before {
  background: none !important;
}

/* CUSTOMIZATION TABS */
.ui.secondary.pointing.menu {
  border-bottom: 1px solid rgba(34, 36, 38, 0.15);
  margin-left: -1em;
  margin-right: -1em;
}

.ui.secondary.pointing.menu .item {
  margin-left: 1em;
  margin-right: 1em;
}

.ui.secondary.pointing.menu a.item:hover {
  background-color: transparent;
  color: #59c4c4 !important;
}

.ui.secondary.pointing.menu .active.item,
.ui.secondary.pointing.menu .active.item :hover {
  border-bottom: 3px solid #59c4c4 !important;
  color: #59c4c4 !important;
}

/* NAVIGATION LINKS */
.ui.text.menu .item:hover,
.ui.dropdown .menu:hover,
.ui.menu .ui.dropdown .menu > .item:hover {
  color: #59c4c4;
}

/* LOGOUT BUTTON */
.ui.basic.button:hover,
.ui.basic.buttons .button:hover {
  color: #59c4c4 !important;
  box-shadow: 0 0 0 1px #46bdbd inset, 0 0 0 0 #46bdbd inset;
}

/* PRIMARY BUTTON */
.ui.primary.button,
.ui.primary.buttons .button {
  background-color: #59c4c4;
  color: #fff;
  text-shadow: none;
  background-image: none;
}

.ui.primary.button.active,
.ui.primary.button:active,
.ui.primary.button:focus,
.ui.primary.button:hover,
.ui.primary.buttons .button.active,
.ui.primary.buttons .button:active,
.ui.primary.buttons .button:focus,
.ui.primary.buttons .button:hover {
  background-color: transparent;
  box-shadow: 0 0 0 2px #59c4c4 inset !important;
  color: #59c4c4;
}

.ui.inverted.primary.button,
.ui.inverted.primary.buttons .button {
  background-color: transparent;
  box-shadow: 0 0 0 2px #59c4c4 inset !important;
  color: #59c4c4;
}

.ui.inverted.primary.button.active,
.ui.inverted.primary.button:active,
.ui.inverted.primary.button:focus,
.ui.inverted.primary.button:hover,
.ui.inverted.primary.buttons .button.active,
.ui.inverted.primary.buttons .button:active,
.ui.inverted.primary.buttons .button:focus,
.ui.inverted.primary.buttons .button:hover {
  background-color: #59c4c4;
}

/* SECONDARY BUTTON */
.ui.secondary.button,
.ui.secondary.buttons .button {
  background-color: #f2714d;
  color: #fff;
  text-shadow: none;
  background-image: none;
}

.ui.secondary.button.active,
.ui.secondary.button:active,
.ui.secondary.button:focus,
.ui.secondary.button:hover,
.ui.secondary.buttons .button.active,
.ui.secondary.buttons .button:active,
.ui.secondary.buttons .button:focus,
.ui.secondary.buttons .button:hover {
  background-color: transparent;
  box-shadow: 0 0 0 2px #f2714d inset !important;
  color: #f2714d;
}

.ui.inverted.secondary.button,
.ui.inverted.secondary.buttons .button {
  background-color: transparent;
  box-shadow: 0 0 0 2px #f2714d inset !important;
  color: #f2714d;
}

.ui.inverted.secondary.button.active,
.ui.inverted.secondary.button:active,
.ui.inverted.secondary.button:focus,
.ui.inverted.secondary.button:hover,
.ui.inverted.secondary.buttons .button.active,
.ui.inverted.secondary.buttons .button:active,
.ui.inverted.secondary.buttons .button:focus,
.ui.inverted.secondary.buttons .button:hover {
  background-color: #f2714d;
}

/* LABELS */
.ui.orange.ribbon.label {
  border-color: #bc340e !important;
}
.ui.orange.label,
.ui.orange.labels .label {
  background-color: #f2714d !important;
  border-color: #f2714d !important;
  color: #fff !important;
}

.ui.teal.ribbon.label {
  border-color: #336e7b !important;
}
.ui.teal.label,
.ui.orange.labels .label {
  background-color: #59c4c4 !important;
  border-color: #59c4c4 !important;
  color: #fff !important;
}
/* Overrides End */

/* Images Start */
.image-frame-border {
  border: 1px solid #ccc;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
}

.bm-transform-effect {
  transform: scale(1, 1);
  transition: 0.25s;
  z-index: 0;
}

.bm-transform-effect:hover {
  transform: scale(1.1, 1.1);
  z-index: 1;
}

/* Images End */

/* Customize & Edit Campaigns Start */
.primary-grid-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 0.25fr;
  grid-template-areas: '. . . .' '. . . .' '. . . .';
  grid-column-gap: 1em;
}

.secondary-grid-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: repeat(auto-fill, 1fr);
  grid-column-gap: 1em;
}

.tertiary-grid-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: repeat(auto-fill, 1fr);
  grid-column-gap: 1em;
  grid-row-gap: 1em;
}

.block-picker {
  /*background-color: red;*/
  box-shadow: unset !important;
  border: 1px solid lightgray;
  margin-bottom: 1em;
}

@media (max-width: 769px) {
  .block-picker {
    margin-left: auto;
    margin-right: auto;
  }
}

.block-picker > div:nth-child(2) > div {
  display: none;
}

.block-picker > div:nth-child(3) {
  padding: 5px !important;
  margin-bottom: -0.75em;
}

.block-picker > div:nth-child(3) > div:nth-child(1) {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.block-picker > div:nth-child(3) > div:nth-child(1) > span {
  flex-basis: 0;
  flex-grow: 1;
}

.block-picker > div:nth-child(3) > div:nth-child(2) {
  display: none;
}
/* Customize & Edit Campaigns End */

/* Navigation Start */
.ui.selection.active.dropdown .menu {
  min-width: 22em !important;
}

.ui.menu .ui.dropdown .menu > .active.item {
  background: #59c4c4 !important;
  color: white !important;
}

.ui.menu .ui.dropdown .menu > .item:hover {
  background: white !important;
  color: #59c4c4 !important;
}

/* STEPS */
.ui.steps {
  line-height: 2.5;
}

.ui.steps .step > .icon {
  font-size: 1em;
}

/* Navigation End */

/* Dashboard Start */
.bar > .progress {
  display: none;
  visibility: hidden;
}
/* Dashboard End */

/* Campaign Details Start */
.display-only > input {
  border: 1px solid transparent !important;
  border-radius: 0.28571429rem;
  cursor: text;
}

.display-only > input {
  color: transparent !important;
  text-shadow: 0 0 0 #000000;
}

.display-only > input :focus {
  outline: none;
}
/* Campaign Details End */

/* Form Field Start */
.disabled-form-field > div,
.disabled-form-field > div > input {
  color: #969696 !important;
  background-color: #f0f0f0 !important;
}
/* Form Field End */

/* other */
.ui.form input[type='checkbox'] {
  vertical-align: middle;
}

.blurring.dimmable > .dimmer {
  background-color: rgba(255, 255, 255, 0.2);
}

.bm-color-effect {
  color: inherit;
}

.bm-color-effect:hover {
  color: #59c4c4;
}

.carousel :focus {
  display: none !important;
}

/* noUI Slider */
.noUi-horizontal .noUi-handle {
  width: 16px;
  height: 16px;
  right: -8px;
  top: -8px;
  border-radius: 12px;
}

.noUi-pips-horizontal {
  height: unset;
}

.noUi-handle:after {
  display: none !important;
  visibility: hidden;
}

.noUi-handle:before,
.noUi-handle:after {
  display: none !important;
  visibility: hidden;
}

.noUi-tooltip {
  font-size: 10px;
  padding-top: 0;
  padding-bottom: 0;
}

.noUi-target {
  border: none;
  height: 5px;
}

.noUi-connect {
  background: #59c4c4;
}

/* Image Overlay */
.image-container {
  position: relative;
  width: 50%;
}

.image {
  display: block;
  width: 100%;
  height: auto;
  transition: 0.5s ease;
  backface-visibility: hidden;
  margin: auto;
}

.image-upload-label {
  opacity: 0;
  transition: 0.5s ease;
}

.image-middle {
  transition: 0.5s ease;
  opacity: 1;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.image-container:hover .image {
  opacity: 1;
}

.image-container:hover .image-upload-label {
  opacity: 1;
}

.image-container:hover .image-middle {
  opacity: 0;
}

.image-overlay {
  color: #59c4c4;
}

.wrong-image-overlay {
  color: rgb(159, 58, 56);
}

.sui-error-message {
  display: block;
  margin: 0.28571429rem 0;
  color: rgb(159, 58, 56);
  font-size: 0.92857143em;
}

/*!* Errors *!*/
/*.ui.form .field .prompt.label {*/
/*  top: -5px!important;*/
/*  !*position: sticky;*!*/
/*  !*margin-left: 65%;*!*/
/*}*/

.ui.form .disabled.field,
.ui.form .disabled.fields .field,
.ui.form .field :disabled,
.ui.disabled.input,
.ui.input:not(.disabled) input[disabled],
.ui.disabled.dropdown,
.ui.dropdown .menu > .disabled.item {
  pointer-events: none;
  opacity: 1 !important;
}

/* MODAL */
.ui.page.modals.dimmer.transition.visible.active {
  background-color: rgba(0, 0, 0, 0.95) !important;
}

